--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -9,6 +9,8 @@
     yum: name={{ item }} state=absent
     with_items:
       - nginx
+  - name: Add index.html
+    copy: src=index.html dest=/var/www/html mode=0644
   - name:  Start services
     service: name={{ item }} state=started enabled=yes
     with_items:
