--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,17 +1,12 @@
 ---
-- hosts: web_server
-  tasks:
-  - name: Install required packages
-    yum: name={{ item }} state=installed
-    with_items:
-      - nginx
-  - name: Remove packages
-    yum: name={{ item }} state=absent
-    with_items:
-      - httpd
-  - name: Add index.html
-    copy: src=index.html dest=/var/www/html mode=0644
-  - name:  Start services
-    service: name={{ item }} state=started enabled=yes
-    with_items:
-      - nginx
+- hosts: webserver
+  roles:
+    - webserver
+
+- hosts: appserver
+  roles:
+    - appserver
+
+- hosts: dbserver
+  roles:
+    - dbserver
