--- a/ansible/roles/dbserver/tasks/main.yml
+++ b/ansible/roles/dbserver/tasks/main.yml
@@ -1,7 +1,8 @@
 ---
 # Configure Database Server
 
-- name: Install required packages
+- name: Install required packages (RedHat)
+  when: ansible_os_family == "RedHat"
   yum: name={{ item }} state=installed
   with_items:
     - mysql-server
