--- a/ansible/roles/webserver/tasks/main.yml
+++ b/ansible/roles/webserver/tasks/main.yml
@@ -15,3 +15,5 @@
   service: name={{ item }} state=started enabled=yes
   with_items:
     - httpd
+  register: command_result
+  failed_when: "'FAILED' in command_result.stderr"
