hack for now to prevent ci errors

--- a/ansible/roles/dbserver/tasks/main.yml
+++ b/ansible/roles/dbserver/tasks/main.yml
@@ -7,6 +7,7 @@
   with_items:
     - mysql-server
 - name:  Start services
+  when: ansible_os_family == "RedHat"
   service: name={{ item }} state=started enabled=yes
   with_items:
     - mysqld
