--- a/solano.yml
+++ b/solano.yml
@@ -1,8 +1,7 @@
+python:
+  python_version: 2.7
+  pip_requirements_file: requirements.txt
+  pip_requirements_file: ci/requirements.txt
 tests:
   - ansible-playbook -i ci/inventory ansible/playbook.yml --check
   - py.test lambda/ --cov-report term-missing --cov lambda/
-python:
-  python_version: 2.7
-  pip_requirements_file:
-    - requirements.txt
-    - ci/requirements.txt
