uses renamed test inventory file

--- a/solano.yml
+++ b/solano.yml
@@ -1,7 +1,6 @@
 python:
   python_version: 2.7
   pip_requirements_file: requirements.txt
-  pip_requirements_file: ci/requirements.txt
 tests:
-  - ansible-playbook -i ci/inventory ansible/playbook.yml --check
+  - ansible-playbook -i ci_ansible_inventory ansible/playbook.yml --check
   - py.test lambda/ --cov-report term-missing --cov lambda/
